--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -22,6 +22,8 @@
             <artifactId>lombok</artifactId>
             <version>1.16.16</version>
         </dependency>
+
+        <!--tink-->
         <dependency>
             <groupId>com.google.crypto.tink</groupId>
             <artifactId>tink</artifactId>
